--- a/index.html
+++ b/index.html
@@ -50,131 +50,134 @@
         <h1 class="header-title">no focus</h1>
       </span>
       <span class="header-text_container">
-        <p class="header-text title-decor">Что делать, когда не можешь делать ничего <br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+        <p class="header-text title-decor">Что делать, когда не можешь делать ничего</p>
+        <p class="header-text title-decor"> Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
       </span>
     </header>
     <script src="./scripts/script.js"></script>
   </body>
-  <section class="first-section">
-    <span>
-      <h2 class="section-title">Почему сосредоточиться так сложно</h2>
-    </span>
-    <ul class="fisrt-section_list">
-      <li class="fisrt-section_list-item">
-        <h3 class="list-title title-decor">Многозадачность</h3>
-        <span class="section-text_container">
-          <p class="section-text">
-            Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? 
-            А дело в том, что её просто не существует. Исследователи <a class="txt-link">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. 
-            А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
-          </p>
-        </span>
-      </li>
-      <li class="fisrt-section_list-item">
-        <h3 class="list-title title-decor">Дофамин</h3>
-        <span class="section-text_container">
-          <p class="section-text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. 
-            Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. 
-            Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
-        </span>
-      </li>
-    </ul>
-  </section>
-  <section class="second-section">
-        <h2 class="section-title">Что снижает концентрацию <br>внимания?</h2>
-      <ul class="second-section_list">
-        <li class="second-section_list-item">
-            <h3 class="list-title title-decor">Многозадачность</h3>
-          <p class="section-text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. 
-            Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
+  <main>
+    <section class="first-section">
+      <span>
+        <h2 class="section-title">Почему сосредоточиться так сложно</h2>
+      </span>
+      <ul class="fisrt-section_list">
+        <li class="fisrt-section_list-item">
+          <h3 class="list-title title-decor">Многозадачность</h3>
+          <span class="section-text_container">
+            <p class="section-text fst">
+              Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? 
+              А дело в том, что её просто не существует. Исследователи <a class="txt-link">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. 
+              А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
+            </p>
+          </span>
         </li>
-        <li class="second-section_list-item">
-          <h3 class="list-title title-decor">Еда</h3>
-          <p class="section-text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. 
-            Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
-        </li>
-        <li class="second-section_list-item">
-          <h3 class="list-title title-decor">Гаджеты</h3>
-          <p class="section-text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. 
-            В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. 
-            Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
+        <li class="fisrt-section_list-item">
+          <h3 class="list-title title-decor">Дофамин</h3>
+          <span class="section-text_container">
+            <p class="section-text fst">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. 
+              Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. 
+              Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
+          </span>
         </li>
       </ul>
-  </section>
-  <section class="third-section">
-      <h2 class="section-title third-section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-    <ul class="third-section_list">
-      <li>
-          <h3 class="list-title title-decor">5 простых (на самом деле не очень) советов</h3>
-      </li>
-      <li class="third-section_list-item">
-        <h3 class="list-title title-decor">Представьте небо и облака</h3>
-        <p class="section-text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. 
-          Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. 
-          В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. 
-          Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
-      </li>
-      <li class="third-section_list-item">
-        <h3 class="list-title title-decor">Включите музыку</h3>
-        <p class="section-text">
-          Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. 
-          Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
-        </p>
-      </li>
-      <li class="third-section_list-item">
-        <h3 class="list-title title-decor">
-          Прогуляйтесь
-        </h3>
-        <p class="section-text">
-          Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="txt-link">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. 
-          Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
-        </p>
-      </li>
-      <li class="third-section_list-item">
-        <h3 class="list-title title-decor">
-          Хорошо ешьте
-        </h3>
-        <p class="section-text">
-          Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. 
-          Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
-        </p>
-      </li>
-      <li class="third-section_list-item">
-        <h3 class="list-title title-decor">
-          Читайте
-        </h3>
-        <p class="section-text">
-          Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. 
-          А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
-        </p>
-      </li>
-    </ul>
-  </section>
-  <section class="gallery-section">
-    <h2 class="list-title title-decor a">А можно в картинках?</h2>
-        <div class="pictures-list">
+    </section>
+    <section class="second-section">
+          <h2 class="section-title second-section_title">Что снижает концентрацию <br>внимания?</h2>
+        <ul class="second-section_list">
+          <li class="second-section_list-item">
+              <h3 class="list-title title-decor">Многозадачность</h3>
+            <p class="section-text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. 
+              Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
+          </li>
+          <li class="second-section_list-item">
+            <h3 class="list-title title-decor">Еда</h3>
+            <p class="section-text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. 
+              Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
+          </li>
+          <li class="second-section_list-item">
+            <h3 class="list-title title-decor">Гаджеты</h3>
+            <p class="section-text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. 
+              В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. 
+              Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
+          </li>
+        </ul>
+    </section>
+    <section class="third-section">
+        <h2 class="section-title third-section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+      <ul class="third-section_list">
+        <li>
+            <h3 class="list-title title-decor">5 простых (на самом деле не очень) советов</h3>
+        </li>
+        <li class="third-section_list-item">
+          <h3 class="list-title title-decor">Представьте небо и облака</h3>
+          <p class="section-text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. 
+            Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. 
+            В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. 
+            Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
+        </li>
+        <li class="third-section_list-item">
+          <h3 class="list-title title-decor">Включите музыку</h3>
+          <p class="section-text">
+            Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. 
+            Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
+          </p>
+        </li>
+        <li class="third-section_list-item">
+          <h3 class="list-title title-decor">
+            Прогуляйтесь
+          </h3>
+          <p class="section-text">
+            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="txt-link">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. 
+            Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+          </p>
+        </li>
+        <li class="third-section_list-item">
+          <h3 class="list-title title-decor">
+            Хорошо ешьте
+          </h3>
+          <p class="section-text">
+            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. 
+            Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+          </p>
+        </li>
+        <li class="third-section_list-item">
+          <h3 class="list-title title-decor">
+            Читайте
+          </h3>
+          <p class="section-text">
+            Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. 
+            А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section class="gallery-section">
+      <h2 class="list-title title-decor a">А можно в картинках?</h2>
+          <div class="pictures-list">
+            <img 
+          class="picture sunset"
+          src="./images/sunset.png"
+          alt="закат">
           <img 
-        class="picture sunset"
-        src="./images/sunset.png"
-        alt="закат">
-        <img 
-        class="picture tape"
-        src="./images/tape.png"
-        alt="кассета">
-        <img 
-        class="picture books"
-        src="./images/books.png"
-        alt="стопка книг">
-        <img
-        class="picture ice-cream"
-        src="./images/ice-cream.png"
-        alt="морожное">
-        <img
-        class="picture street"
-        src="./images/street.png"
-        alt="улица">
-        </div>
-  </section>
+          class="picture tape"
+          src="./images/tape.png"
+          alt="кассета">
+          <img 
+          class="picture books"
+          src="./images/books.png"
+          alt="стопка книг">
+          <img
+          class="picture ice-cream"
+          src="./images/ice-cream.png"
+          alt="морожное">
+          <img
+          class="picture street"
+          src="./images/street.png"
+          alt="улица">
+          </div>
+    </section>
+</main>
   <footer class="footer decorated-zone">
     <h4 class="footer-title">focus</h4>
   </footer>
