--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </ul>
         </section>
         <section class="second-section">
-              <h2 class="section-title second-section_title">Что снижает концентрацию <br>внимания?</h2>
+              <h2 class="section-title">Что снижает концентрацию <br>внимания?</h2>
             <ul class="second-section_list">
               <li class="second-section_list-item">
                   <h3 class="list-title title-decor">Многозадачность</h3>
@@ -103,7 +103,7 @@
             </ul>
         </section>
         <section class="third-section">
-            <h2 class="section-title third-section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+            <h2 class="section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
           <ul class="third-section_list">
             <li>
                 <h3 class="list-title title-decor">5 простых (на самом деле не очень) советов</h3>
@@ -152,7 +152,7 @@
           </ul>
         </section>
         <section class="gallery-section">
-          <h2 class="list-title title-decor a">А можно в картинках?</h2>
+          <h2 class="list-title title-decor gallery-section_title">А можно в картинках?</h2>
               <div class="pictures-list">
                 <img 
               class="picture sunset"
