--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     <main>
       <section class="why-section">
         <h2 class="section-title">Почему сосредоточиться так сложно</h2>
-        <ul class="why-section_list">
+        <ul class="section_list ">
           <li class="section_list-item">
-            <h4 class="list-title title-decor">Многозадачность</h4>
+            <h3 class="list-title title-decor">Многозадачность</h3>
             <p class="section-text">
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
@@ -91,9 +91,9 @@
       </section>
       <section class="which-section">
         <h2 class="section-title">Что снижает концентрацию <br />внимания?</h2>
-        <ul class="which-section_list">
+        <ul class="section_list three-columns_list">
           <li class="section_list-item">
-            <h4 class="list-title title-decor">Многозадачность</h4>
+            <h3 class="list-title title-decor">Многозадачность</h3>
             <p class="section-text">
               Как концентрация может снижаться из-за… концентрации? Любая
               стрессовая ситуация (и резко меняющийся мир в целом) заставляет
@@ -133,12 +133,10 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <div class="how-section_list">
-          <article>
-            <h4 class="list-title title-decor">
+        <div class="section_list">
+            <h3 class="list-title title-decor">
               5 простых (на самом деле не очень) советов
-            </h4>
-          </article>
+            </h3>
           <article class="section_list-item">
             <h4 class="list-title title-decor">Представьте небо и облака</h4>
             <p class="section-text">
