--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
-    <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="icon" href="./images/favicon.ico" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
@@ -75,7 +75,7 @@
             </p>
           </li>
           <li class="section_list-item">
-            <h4 class="list-title title-decor">Дофамин</h4>
+            <h3 class="list-title title-decor">Дофамин</h3>
             <p class="section-text">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
               нашей невозможности сосредоточиться замешана и полная
@@ -90,8 +90,8 @@
         </ul>
       </section>
       <section class="which-section">
-        <h2 class="section-title">Что снижает концентрацию <br />внимания?</h2>
-        <ul class="section_list three-columns_list">
+        <h2 class="section-title">Что снижает концентрацию внимания?</h2>
+        <ul class="section_list which_list">
           <li class="section_list-item">
             <h3 class="list-title title-decor">Многозадачность</h3>
             <p class="section-text">
@@ -104,7 +104,7 @@
             </p>
           </li>
           <li class="section_list-item">
-            <h4 class="list-title title-decor">Еда</h4>
+            <h3 class="list-title title-decor">Еда</h3>
             <p class="section-text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
               доставляют в мозг энергию и помогают ему лучше работать. Но уходит
@@ -115,7 +115,7 @@
             </p>
           </li>
           <li class="section_list-item">
-            <h4 class="list-title title-decor">Гаджеты</h4>
+            <h3 class="list-title title-decor">Гаджеты</h3>
             <p class="section-text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
@@ -138,7 +138,7 @@
               5 простых (на самом деле не очень) советов
             </h3>
           <article class="section_list-item">
-            <h4 class="list-title title-decor">Представьте небо и облака</h4>
+            <h3 class="list-title title-decor text-title">Представьте небо и облака</h3>
             <p class="section-text">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
               успокоиться. Ведь часто именно тревожные мысли о сложных задачах
@@ -151,7 +151,7 @@
             </p>
           </article>
           <article class="section_list-item">
-            <h4 class="list-title title-decor">Включите музыку</h4>
+            <h3 class="list-title title-decor text-title">Включите музыку</h3>
             <p class="section-text">
               Но не любую, и не любимую. Любимая может быть связана с сильными
               положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -160,7 +160,7 @@
             </p>
           </article>
           <article class="section_list-item">
-            <h4 class="list-title title-decor">Прогуляйтесь</h4>
+            <h3 class="list-title title-decor text-title">Прогуляйтесь</h3>
             <p class="section-text">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
               <a class="txt-link" href="#0" target="_blank">показал</a>, что
@@ -172,7 +172,7 @@
             </p>
           </article>
           <article class="section_list-item">
-            <h4 class="list-title title-decor">Хорошо ешьте</h4>
+            <h3 class="list-title title-decor text-title">Хорошо ешьте</h3>
             <p class="section-text">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
@@ -181,7 +181,7 @@
             </p>
           </article>
           <article class="section_list-item">
-            <h4 class="list-title title-decor">Читайте</h4>
+            <h3 class="list-title title-decor text-title">Читайте</h3>
             <p class="section-text">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или
